--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
     <!-- main -->
     <main class="flex-1 px-6 py-8">
       <div class="flex flex-col items-center text-center">
-        <img src="https://via.placeholder.com/120" alt="profile"
+        <img src="default-image.jpg" alt="profile"
           class="h-28 w-28 rounded-full mb-4 shadow"/>
         <h1 class="text-2xl font-bold text-gray-900 mb-1">User Name</h1>
         <p class="text-gray-600 mb-6">user@email.com</p>
