커밋 메시지

--- a/main.html
+++ b/main.html
@@ -15,14 +15,13 @@
     <!-- header -->
     <header class="flex items-center justify-between p-4 pb-2">
       <a href="login.html" class="flex items-center justify-center size-10 rounded-full hover:bg-gray-100" aria-label="back">
-        <span class="material-symbols-outlined text-gray-800">arrow_back</span>
+      <span class="material-symbols-outlined text-gray-800">arrow_back</span>
       </a>
-      <div class="w-12"></div>
-      <h1 class="text-xl font-bold text-slate-800">My Tasks</h1>
+      <h1 class="flex-1 text-center text-xl font-bold text-slate-800">My Tasks</h1>
       <div class="flex w-12 items-center justify-end">
-        <button id="addBtn" type="button" class="flex h-12 w-12 items-center justify-center rounded-full bg-slate-100 text-slate-800 hover:bg-slate-200" aria-label="add task">
-          <span class="material-symbols-outlined text-2xl">add</span>
-        </button>
+      <button id="addBtn" type="button" class="flex h-12 w-12 items-center justify-center rounded-full bg-slate-100 text-slate-800 hover:bg-slate-200" aria-label="add task">
+        <span class="material-symbols-outlined text-2xl">add</span>
+      </button>
       </div>
     </header>
 
@@ -41,11 +40,11 @@
     <!-- footer -->
     <footer class="sticky bottom-0 bg-white shadow-[0_-1px_3px_rgba(0,0,0,0.05)]">
       <nav class="flex justify-around px-4 pb-3 pt-2">
-        <a class="flex flex-col items-center gap-1 text-blue-600" href="#">
+        <a class="flex flex-col items-center gap-1 text-blue-600" href="main.html">
           <span class="material-symbols-outlined text-2xl">checklist</span>
           <span class="text-xs font-medium">Tasks</span>
         </a>
-        <a class="flex flex-col items-center gap-1 text-slate-500" href="#">
+        <a class="flex flex-col items-center gap-1 text-slate-500" href="calender.html">
           <span class="material-symbols-outlined text-2xl">calendar_month</span>
           <span class="text-xs font-medium">Calendar</span>
         </a>
