커밋 메시지

--- a/calender.html
+++ b/calender.html
@@ -118,7 +118,8 @@
 </main>
 </div>
 
-
+<!-- 기존 main.js는 그대로 포함 (존재하지 않는 요소가 없어도 안전하게 early return 합니다) -->
 <script src="main.js"></script>
 <script src="calender.js"></script>
 </body></html>
+<!-- ...existing code... -->
